<resources>
    <string name="app_name">Tuần đường</string>
    <string name="app_title">Tổng hợp camera</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigafrtion drawer</string>

    <string name="action_settings">Settings</string>
    <string name="road_test">Tuần đường</string>
    <string name="accident">Tai nạn</string>
    <string name="accident_report">Tai nạn</string>
    <string name="problem">Sự cố</string>
    <string name="problem_report">Sự cố</string>
    <string name="lastday">Báo cáo cuối ngày</string>
    <string name="lastdaytext">Cuối ngày</string>
    <string name="map">Map</string>
    <string name="thongtin">Thông tin</string>
    <string name="username">Tên đăng nhập </string>
    <string name="hide_map">Ẩn bản đồ    </string>
    <string name="show_map">Hiện bản đồ   </string>
    <string name="password">Mật khẩu</string>
    <string name="error_blank_username">Tên đăng nhập không được để trống!</string>
    <string name="error_blank_password">Mật khẩu không được để trống!</string>


    <string name="road_surface">Mặt đường</string>
    <string name="roadbed">Nền đường</string>
    <string name="divider">Dải phân cách</string>
    <string name="underground_drain_people">Cống chui dân sinh</string>
    <string name="drainage_box_culvert">Cống hộp bản thoát nước</string>
    <string name="culverts">Cống tròn</string>
    <string name="slopes">Mái dốc</string>
    <string name="retaining_walls">Tường chắn</string>
    <string name="protective_barrier">Hàng rào bảo vệ</string>
    <string name="lighting_Systems">Hệ thống chiếu sáng</string>
    <string name="notice_board">Biển báo</string>
    <string name="road_markings">Vạch sơn đường</string>
    <string name="column_Km">Cột Km</string>
    <string name="bridge">Cầu</string>
    <string name="marker">Cọc tiêu</string>
    <string name="manhole_sumps">Hố ga, hố thu</string>
    <string name="longitudinal_grooves_groove_Border">Rãnh dọc, rãnh biên</string>
    <string name="vertical_drain">Cống dọc</string>

    <string name="road_name">Tên đường</string>
    <string name="prompt_item">Chọn mục cần nhập </string>
    <string name="enter_infor">Nhập dữ liệu</string>
    <string name="check_road_flat">Đo độ bằng phẳng IRI</string>
    <string name="single_select">Chọn mục đơn giản</string>
    <string name="multi_select">Chọn nhiều mục cùng </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="yes">Có </string>
    <string name="no">Không</string>
    <string name="logout">Đăng xuất</string>
    <string name="vitri"> Vị trí</string>
    <string name="datastatus"> Trạng thái dữ liệu</string>
    <string name="uploaded"> Đã upload lên server!</string>
    <string name="not_upload"> Chưa upload lên server!</string>
    <string name="report">Báo cáo</string>
    <string name="common_summary">Tổng kết chung....</string>
    <string name="bancochacchandanhapdayduthongtin">Bạn có chắc chắn đã nhập đầy đủ thông tin?</string>
    <string name="bancochacchanmuonhuy">Bạn có chắc chắn muốn huỷ?</string>
    <string name="bancochacchanmuondangxuat">Bạn có chắc chắn muốn đăng xuất chứ?</string>
    <string name="bancochacchanmuonxoa">Bạn có chắc chắn muốn xoá chứ?</string>
    <string name="bancochacchanmuonthoat">Bạn có chắc chắn muốn thoát chứ?</string>
    <string name="nhaptenduong">Nhập tên đường</string>
    <string name="bancanchontenduongtruoctien">Bạn cần nhập tên đường trước tiên</string>
    <string name="bancomuonchonlaitenduongchu">Bạn có muốn chọn lại tên đường không?</string>
    <string name="statics">Thống kê</string>
    <string name="video_view">Xem video</string>
    <string name="hangmuc">Hạng mục</string>
    <string name="dahhmuc">Danh mục</string>
    <string name="tongchieudaiquangduong">Chiều dài quãng đường( ước tính)</string>
    <string name="thongke">Thống kê</string>
    <string name="ghichu">Ghi chú</string>
    <string name="congviec">Công việc</string>
    <string name="tongthoigian">Tổng thời gian( ước tính)</string>
    <string name="thoigian">Thời gian</string>
    <string name="soluongoga">Số lượng ổ gà</string>
    <string name="comment">Nhận xét chung</string>
    <string name="Done"> Xong</string>
    <string name="Filter"> Lọc</string>
    <string name="NhatKy"> Nhật ký</string>
    <string name="Tinhtrang"> Tình trạng</string>
    <string name="Summary">Tổng kết</string>
    <string name="motachitet">Mô tả chi tiết...</string>
    <string name="Status">Tình trạng</string>
    <string name="enter_road_name">Nhập tên đường</string>

    <string name="facebook_app_id">1665126547145281</string>
    <string name="title_activity_diary_report_content">DiaryReportContent</string>
    <string name="start_image_capture">Take a New Picture</string>
    <string name="capture_image">Snap it!</string>
    <string name="save_image">Save Picture</string>
    <string name="recapture_image">Retake Picture</string>
    <string name="capturing_image">Taking New Picture</string>
    <string name="done">Done</string>
    <string name="other">Khác</string>
    <string name="title_activity_ac_video">AcVideo</string>

    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Chọn thiết bị</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Đang tìm kiếm thiết bị...</string>
    <string name="no_ble_devices">Ko tìm thấy thiết bị hỗ trợ BLE.</string>
    <string name="connected">Đã kết nối</string>
    <string name="disconnected">Đã ngắt kết nối</string>
    <string name="ready">Sẵn sàng</string>
    <string name="disconnect">Ngắt kết nối</string>
    <string name="connect">Kết nối</string>
    <string name="unpair">Hủy ghép đôi</string>
    <string name="pair">Ghép đôi</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Thoát khỏi trang?</string>
    <string name="popup_message">Bạn thật sự muốn thoát khỏi trang?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy không hỗ trợ thiết bị này</string>
    <string name="scan">Tìm</string>
    <string name="cancel">Hủy</string>
    <string name="title_activity_graph_report">GraphReport</string>

</resources>
