<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_input"
            android:icon="@mipmap/input"
            android:title="@string/enter_infor" />
        <item
            android:id="@+id/nav_report"
            android:icon="@mipmap/report"
            android:title="@string/statics" />

        <item
            android:id="@+id/nav_null"
            android:title="" />

        <item android:title="Cài đặt">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@mipmap/logout"
                    android:title="@string/logout" />
            </menu>
        </item>


    </group>

</menu>
