<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/scrollContainer"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/mainColor">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="20dp"
                android:layout_height="28dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@mipmap/back_button" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/check_road_flat"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <fragment
            android:id="@+id/mapp"
            class="com.example.macos.libraries.WorkaroundMapFragment"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/mainColor30" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            app:seriesColor="#ee0000"
            app:seriesType="line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="#F4F4F4"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="Tổng quan"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tongthoigian" />

            <TextView
                android:id="@+id/tvTotalDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tongchieudaiquangduong" />

            <TextView
                android:id="@+id/tvProblemFounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/soluongoga" />

            <TextView
                android:id="@+id/tvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/Summary"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>